--- a/posts.html
+++ b/posts.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div>
-                <h1>rakhov</h1>
+                <h1>Datalek's notes</h1>
                 <p>These are just my notes .. probably you shouldn't be here ..</p>
             </div>
             <nav>
