Add new stuff to the blog

--- a/posts.html
+++ b/posts.html
@@ -29,6 +29,10 @@
             <div id="post-list">
     <ul>
     
+        <li>
+            <a href="./posts/why-this-blog.html">Why this blog?!</a> - November  1, 2021
+        </li>
+    
     </ul>
 </div>
 
