Add new stuff to the blog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div>
                 <h1>Datalek's notes</h1>
-                <p>These are just my notes .. probably you shouldn't be here ..</p>
+                <p>The following bytes are just my notes, unless I sent you the link you are probably in the wrong place.</p>
             </div>
             <nav>
                 <a href="./">Home</a>
