--- a/posts.html
+++ b/posts.html
@@ -15,7 +15,7 @@
         <header>
             <div>
                 <h1>Datalek's notes</h1>
-                <p>These are just my notes .. probably you shouldn't be here ..</p>
+                <p>The following bytes are just my notes, unless I sent you the link you are probably in the wrong place.</p>
             </div>
             <nav>
                 <a href="./">Home</a>
@@ -28,6 +28,10 @@
         <main>
             <div id="post-list">
     <ul>
+    
+        <li>
+            <a href="./posts/clean-architecture.html">Notes on Clean Architecture</a> - April 10, 2022
+        </li>
     
         <li>
             <a href="./posts/test-driven-development-by-example.html">Test Driven Development By Example</a> - March 10, 2022
